--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -1,14 +1,14 @@
 ﻿@model CrudOperationADONet.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = Model!=null?"Edit": "Create";
 }
 
 <h1>Create</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="@ViewData["Title"]">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId"/>
              <div class="form-group">
