--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -49,8 +49,8 @@
                 @Html.DisplayFor(modelItem => item.CategoryId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.ProductId  }) |
+                @Html.ActionLink("Delete", "Delete",new {  id=item.ProductId },new{onclick="return confirm('Are you sure to delete?')"})
             </td>
         </tr>
 }
